force-app/main/default/objects/Application__c/fields/Is_Document_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Checklist_Complete__c</fullName>
    <formula>IF(ISBLANK(Document_Checklist_Complete_Date__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Document_Checklist_Complete</label>
    <type>Checkbox</type>
</CustomField>