force-app/main/default/objects/Application__c/fields/Is_Marketing_First_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketing_First_Attempt__c</fullName>
    <description>Is Marketing First Attempt</description>
    <formula>Loan_Information__r.Operation__r.Is_Marketing_First_Attempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Marketing First Attempt</label>
    <type>Checkbox</type>
</CustomField>