force-app/main/default/objects/Application__c/fields/Is_Mine__c.field-meta.xml
<CustomField>
    <fullName>Is_Mine__c</fullName>
    <formula>(OwnerId =  $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Mine</label>
    <type>Checkbox</type>
</CustomField>