force-app/main/default/objects/Application__c/fields/Is_Request_Legal_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_Request_Legal_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Request Legal Document</label>
    <type>Checkbox</type>
</CustomField>