force-app/main/default/objects/Application__c/fields/Is_Show_Button_Reassign_LAO__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_Button_Reassign_LAO__c</fullName>
    <formula>Legal_Document_Approval__c  = &apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Show Button - Reassign LAO</label>
    <type>Checkbox</type>
</CustomField>