force-app/main/default/objects/Application__c/fields/Is_Show_Button_Return_To_Input_Survey__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_Button_Return_To_Input_Survey__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Show Button - Return To Input Survey</label>
    <type>Checkbox</type>
</CustomField>