force-app/main/default/objects/Application__c/fields/Is_Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Is_Take_Over__c</fullName>
    <label>Is Take Over?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ada</fullName>
            </value>
            <value>
                <fullName>Tidak Ada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>