force-app/main/default/objects/Application__c/fields/Jabatan_1__c.field-meta.xml
<CustomField>
    <fullName>Jabatan_1__c</fullName>
    <label>Jabatan 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>