force-app/main/default/objects/Application__c/fields/Jabatan_2__c.field-meta.xml
<CustomField>
    <fullName>Jabatan_2__c</fullName>
    <label>Jabatan 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>