force-app/main/default/objects/Application__c/fields/Jangka_Waktu__c.field-meta.xml
<CustomField>
    <fullName>Jangka_Waktu__c</fullName>
    <label>Jangka Waktu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>