force-app/main/default/objects/Application__c/fields/jangka_waktu_jabatan_1__c.field-meta.xml
<CustomField>
    <fullName>jangka_waktu_jabatan_1__c</fullName>
    <label>Jangka waktu jabatan 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>