force-app/main/default/objects/Application__c/fields/jangka_waktu_jabatan_2__c.field-meta.xml
<CustomField>
    <fullName>jangka_waktu_jabatan_2__c</fullName>
    <label>Jangka waktu jabatan 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>