force-app/main/default/objects/Application__c/fields/Jenis_Fasilitas__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Fasilitas__c</fullName>
    <label>Jenis Fasilitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>