force-app/main/default/objects/Application__c/fields/Jumlah_modal_dasar__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_modal_dasar__c</fullName>
    <label>Jumlah modal dasar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>