force-app/main/default/objects/Application__c/fields/Jumlah_Modal_Ditempatkan_Disetor__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Modal_Ditempatkan_Disetor__c</fullName>
    <label>Jumlah Modal Ditempatkan &amp; Disetor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>