force-app/main/default/objects/Application__c/fields/Kas_Bank_atau_Setara_Kas__c.field-meta.xml
<CustomField>
    <fullName>Kas_Bank_atau_Setara_Kas__c</fullName>
    <label>Kas Bank atau Setara Kas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>