force-app/main/default/objects/Application__c/fields/Kesimpulan__c.field-meta.xml
<CustomField>
    <fullName>Kesimpulan__c</fullName>
    <label>Kesimpulan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>