force-app/main/default/objects/Application__c/fields/Keterangan_NIB__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_NIB__c</fullName>
    <label>Keterangan NIB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sesuai</fullName>
            </value>
            <value>
                <fullName>Tidak Sesuai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>