force-app/main/default/objects/Application__c/fields/Keterangan_Perolehan_jaminan__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_Perolehan_jaminan__c</fullName>
    <label>Keterangan Perolehan jaminan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>