force-app/main/default/objects/Application__c/fields/Keterangan_susunan_pemegang_saham__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_susunan_pemegang_saham__c</fullName>
    <label>Keterangan susunan pemegang saham</label>
    <length>255</length>
    <type>Text</type>
</CustomField>