force-app/main/default/objects/Application__c/fields/Kewenangan_direksi__c.field-meta.xml
<CustomField>
    <fullName>Kewenangan_direksi__c</fullName>
    <label>Kewenangan direksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>