force-app/main/default/objects/Application__c/fields/Kondisi_Agunan__c.field-meta.xml
<CustomField>
    <fullName>Kondisi_Agunan__c</fullName>
    <label>Kondisi Agunan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>