force-app/main/default/objects/Application__c/fields/Kondisi_Struktur_Bangunan__c.field-meta.xml
<CustomField>
    <fullName>Kondisi_Struktur_Bangunan__c</fullName>
    <label>Kondisi Struktur Bangunan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kondisi Struktur Bangunan 100%</fullName>
            </value>
            <value>
                <fullName>Kondisi Struktur Bangunan &lt;100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>