force-app/main/default/objects/Application__c/fields/Kontrak_Take_Over_atas_nama__c.field-meta.xml
<CustomField>
    <fullName>Kontrak_Take_Over_atas_nama__c</fullName>
    <label>Kontrak Take Over atas nama</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debitur</fullName>
            </value>
            <value>
                <fullName>Pasangan</fullName>
            </value>
            <value>
                <fullName>Orang Tua</fullName>
            </value>
            <value>
                <fullName>Perusahaan</fullName>
            </value>
            <value>
                <fullName>Pemegang Saham Perusahaan</fullName>
            </value>
            <value>
                <fullName>Keluaga</fullName>
            </value>
            <value>
                <fullName>Orang Lain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>