force-app/main/default/objects/Application__c/fields/Kriteria_Penggunaan_Dana__c.field-meta.xml
<CustomField>
    <fullName>Kriteria_Penggunaan_Dana__c</fullName>
    <label>Kriteria Penggunaan Dana</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jika Konsumtif :</fullName>
            </value>
            <value>
                <fullName>Renovasi</fullName>
            </value>
            <value>
                <fullName>Pendidikan</fullName>
            </value>
            <value>
                <fullName>Pengobatan</fullName>
            </value>
            <value>
                <fullName>Pelunasan Obligasi</fullName>
            </value>
            <value>
                <fullName>Pernikahan/Pesta</fullName>
            </value>
            <value>
                <fullName>Pembelian Kendaraan Pribadi</fullName>
            </value>
            <value>
                <fullName>Pembelian Asset Pibadi Lainnya</fullName>
            </value>
            <value>
                <fullName>Jika Produktif:</fullName>
            </value>
            <value>
                <fullName>Modal Kerja</fullName>
            </value>
            <value>
                <fullName>Investasi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>