force-app/main/default/objects/Application__c/fields/Laba_Ditahan__c.field-meta.xml
<CustomField>
    <fullName>Laba_Ditahan__c</fullName>
    <label>Laba Ditahan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>