force-app/main/default/objects/Application__c/fields/Laba_Kotor_Debitur_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Kotor_Debitur_Formula__c</fullName>
    <formula>TEXT( Omset_Per_Bulan_Debitur__c - HPP_Debitur__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba Kotor</label>
    <type>Text</type>
</CustomField>