force-app/main/default/objects/Application__c/fields/Laba_Kotor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Kotor_Formula__c</fullName>
    <formula>Pendapatan_Penjualan__c +  HPP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba Kotor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>