force-app/main/default/objects/Application__c/fields/Laba_Operasional_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Operasional_Formula__c</fullName>
    <formula>Laba_Kotor_Formula__c +  Beban_Operasional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba Operasional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>