force-app/main/default/objects/Application__c/fields/Laba_Operasional_Spouse_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Operasional_Spouse_Formula__c</fullName>
    <formula>TEXT( VALUE(Laba_Kotor_Spouse_Formula__c ) - Beban_Operasional_Spouse__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba Operasional</label>
    <type>Text</type>
</CustomField>