force-app/main/default/objects/Application__c/fields/Laba_Rugi_sebelum_Pajak_Debitur_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Rugi_sebelum_Pajak_Debitur_Formula__c</fullName>
    <formula>TEXT(( VALUE(Laba_Operasional_Debitur_Formula__c) + Pendapatan_Lain_Lain_Debitur__c ) - Beban_Lain_Lain_Debitur__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba (Rugi) sebelum Pajak</label>
    <type>Text</type>
</CustomField>