force-app/main/default/objects/Application__c/fields/Laba_Rugi_sebelum_Pajak_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Rugi_sebelum_Pajak_Formula__c</fullName>
    <formula>Laba_Operasional_Formula__c +  Pendapatan_Lain_Lain__c +  Beban_Lain_Lain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba (Rugi) sebelum Pajak</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>