force-app/main/default/objects/Application__c/fields/Laba_Rugi_setelah_Pajak_Formula__c.field-meta.xml
<CustomField>
    <fullName>Laba_Rugi_setelah_Pajak_Formula__c</fullName>
    <formula>Laba_Rugi_sebelum_Pajak_Formula__c + Beban_Pajak__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laba (Rugi) setelah Pajak</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>