force-app/main/default/objects/Application__c/fields/LAO__c.field-meta.xml
<CustomField>
    <fullName>LAO__c</fullName>
    <formula>$User.FirstName &amp; &quot; &quot; &amp;  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAO</label>
    <type>Text</type>
</CustomField>