force-app/main/default/objects/Application__c/fields/Legal_Document__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Document</label>
    <referenceTo>Legal_Document__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>