force-app/main/default/objects/Application__c/fields/Lembaga_LJK__c.field-meta.xml
<CustomField>
    <fullName>Lembaga_LJK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lembaga LJK</label>
    <referenceTo>Master_Financial_Company__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>