force-app/main/default/objects/Application__c/fields/Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>