force-app/main/default/objects/Application__c/fields/LTV_formula__c.field-meta.xml
<CustomField>
    <fullName>LTV_formula__c</fullName>
    <formula>Survey__r.LTV_Market_Price_By_Type__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV_formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>