force-app/main/default/objects/Application__c/fields/LTV_of_asset_liquidation__c.field-meta.xml
<CustomField>
    <fullName>LTV_of_asset_liquidation__c</fullName>
    <label>LTV of asset liquidation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>