force-app/main/default/objects/Application__c/fields/LTV_of_asset_market_price_Formula__c.field-meta.xml
<CustomField>
    <fullName>LTV_of_asset_market_price_Formula__c</fullName>
    <formula>&apos;LTV of asset market price&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV of asset market price</label>
    <type>Text</type>
</CustomField>