force-app/main/default/objects/Application__c/fields/Maksimal_Past_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Maksimal_Past_Due_Days__c</fullName>
    <label>Maksimal Past Due Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>