force-app/main/default/objects/Application__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <formula>Lead__r.Primary_Contact__r.Marital_Status__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital Status</label>
    <type>Text</type>
</CustomField>