force-app/main/default/objects/Application__c/fields/Master_Sertifikat_Atas_Nama__c.field-meta.xml
<CustomField>
    <fullName>Master_Sertifikat_Atas_Nama__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sertipikat Atas Nama</label>
    <referenceTo>Master_Sertifikat_Atas_Nama__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>