force-app/main/default/objects/Application__c/fields/Max_past_due_days_Formula__c.field-meta.xml
<CustomField>
    <fullName>Max_past_due_days_Formula__c</fullName>
    <formula>&apos;Max past due days&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max past due days</label>
    <type>Text</type>
</CustomField>