force-app/main/default/objects/Application__c/fields/Modal_disetor__c.field-meta.xml
<CustomField>
    <fullName>Modal_disetor__c</fullName>
    <label>Modal disetor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>