force-app/main/default/objects/Application__c/fields/Monthly_Income_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income_Spouse__c</fullName>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>