force-app/main/default/objects/Application__c/fields/Nama_PIC__c.field-meta.xml
<CustomField>
    <fullName>Nama_PIC__c</fullName>
    <label>Nama PIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>