force-app/main/default/objects/Application__c/fields/Net_Income_Spouse_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_Spouse_Formula__c</fullName>
    <formula>IF( Loan_Information__r.Account.Primary_Contact__r.Spouse_Profession__r.Name == &quot;Wiraswasta&quot;, TEXT(VALUE( Laba_Rugi_sebelum_Pajak_Spouse_Formula__c ) - Beban_Pajak_Spouse__c ), TEXT( Monthly_Income_Spouse__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Income</label>
    <type>Text</type>
</CustomField>