force-app/main/default/objects/Application__c/fields/Net_Profit_Margin_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Margin_Formula__c</fullName>
    <formula>( Laba_Rugi_setelah_Pajak_Formula__c / Pendapatan_Penjualan__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>