force-app/main/default/objects/Application__c/fields/No_Telp_Fax__c.field-meta.xml
<CustomField>
    <fullName>No_Telp_Fax__c</fullName>
    <label>No. Telp/Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>