force-app/main/default/objects/Application__c/fields/Nominal_Cicilan__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Cicilan__c</fullName>
    <label>Nominal Cicilan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>