force-app/main/default/objects/Application__c/fields/Nomor_Akta_Nikah_Jika_ada_pasangan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Akta_Nikah_Jika_ada_pasangan__c</fullName>
    <label>Nomor Akta Nikah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>