force-app/main/default/objects/Application__c/fields/Nomor_KK_Pasangan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_KK_Pasangan__c</fullName>
    <label>Nomor KK Pasangan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>