force-app/main/default/objects/Application__c/fields/NPWP_Number__c.field-meta.xml
<CustomField>
    <fullName>NPWP_Number__c</fullName>
    <formula>Lead__r.NPWP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPWP Number</label>
    <type>Text</type>
</CustomField>