force-app/main/default/objects/Application__c/fields/NST_Category__c.field-meta.xml
<CustomField>
    <fullName>NST_Category__c</fullName>
    <description>NST Category</description>
    <label>NST Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>