force-app/main/default/objects/Application__c/fields/NST_Pricing_Shadow__c.field-meta.xml
<CustomField>
    <fullName>NST_Pricing_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NST Pricing Shadow</label>
    <referenceTo>NST_Pricing_Shadow__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>