force-app/main/default/objects/Application__c/fields/NTF_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>NTF_Pengajuan__c</fullName>
    <description>formula field to set Exposure</description>
    <formula>IF( OR( ISNULL(Exposure__c) , Exposure__c=0) , Loan_Information__r.NTF_Pengajuan__c, Exposure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NTF_Pengajuan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>