force-app/main/default/objects/Application__c/fields/Offering_Letter_Status__c.field-meta.xml
<CustomField>
    <fullName>Offering_Letter_Status__c</fullName>
    <label>Offering Letter Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setuju</fullName>
            </value>
            <value>
                <fullName>Tidak Setuju</fullName>
            </value>
            <value>
                <fullName>Perbaikan</fullName>
                <isActive>false</isActive>
                <label>Perbaikan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>