force-app/main/default/objects/Application__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>