force-app/main/default/objects/Application__c/fields/Other_Business__c.field-meta.xml
<CustomField>
    <fullName>Other_Business__c</fullName>
    <label>Other Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ada</fullName>
            </value>
            <value>
                <fullName>Tidak Ada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>