force-app/main/default/objects/Application__c/fields/Other_TC__c.field-meta.xml
<CustomField>
    <fullName>Other_TC__c</fullName>
    <label>Other TC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>