force-app/main/default/objects/Application__c/fields/Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Amount__c</fullName>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>