force-app/main/default/objects/Application__c/fields/Past_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Days__c</fullName>
    <label>Past Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>