force-app/main/default/objects/Application__c/fields/Pefindo_Score__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Score__c</fullName>
    <label>Pefindo Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no data</fullName>
                <default>true</default>
                <label>no data</label>
            </value>
            <value>
                <fullName>very high</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>