force-app/main/default/objects/Application__c/fields/Periode_Month__c.field-meta.xml
<CustomField>
    <fullName>Periode_Month__c</fullName>
    <label>Periode Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>