force-app/main/default/objects/Application__c/fields/Persediaan__c.field-meta.xml
<CustomField>
    <fullName>Persediaan__c</fullName>
    <label>Persediaan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>