force-app/main/default/objects/Application__c/fields/Piutang_Usaha_Dagang__c.field-meta.xml
<CustomField>
    <fullName>Piutang_Usaha_Dagang__c</fullName>
    <label>Piutang Usaha/Dagang</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>