force-app/main/default/objects/Application__c/fields/Product_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Formula__c</fullName>
    <formula>&apos;Product Type&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>