force-app/main/default/objects/Application__c/fields/Proporsi_Credit_Kepemilikan_Aset__c.field-meta.xml
<CustomField>
    <fullName>Proporsi_Credit_Kepemilikan_Aset__c</fullName>
    <label>Proporsi Credit Kepemilikan Aset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;30% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;30% sd 50% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;50% sd 70% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;70 sd 100% Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>