force-app/main/default/objects/Application__c/fields/Proporsi_Credit_Kepemilikan_Aset_Inc_BF__c.field-meta.xml
<CustomField>
    <fullName>Proporsi_Credit_Kepemilikan_Aset_Inc_BF__c</fullName>
    <label>Proporsi Credit Kepemilikan Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;0% sd 30% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;30% sd 50% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;50% sd 70% Credit</fullName>
            </value>
            <value>
                <fullName>&gt;70 sd 100% Credit</fullName>
            </value>
            <value>
                <fullName>&lt;30% Credit</fullName>
                <isActive>false</isActive>
                <label>&lt;30% Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>